Changed flipping bitmap for memory issues